// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a binned custom dimension query 1`] = `
"WITH  age_range_cte AS (
                    SELECT
                        FLOOR(MIN("table1".dim1)) AS min_id,
                        CEIL(MAX("table1".dim1)) AS max_id,
                        FLOOR((MAX("table1".dim1) - MIN("table1".dim1)) / 3) AS bin_width
                    FROM "db"."schema"."table1" AS \`table1\`
                )
SELECT
  "table1".dim1 AS \`table1_dim1\`,
CASE
                    WHEN "table1".dim1 IS NULL THEN NULL
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 0, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 1)
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 1, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 2)
ELSE CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 2, ' - ', age_range_cte.max_id)
                    END
                    AS \`age_range\`,
CASE
                        WHEN "table1".dim1 IS NULL THEN 3
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN 0
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN 1
ELSE 2
                        END
                        AS \`age_range_order\`,
  MAX("table1".number_column) AS \`table1_metric1\`
FROM "db"."schema"."table1" AS \`table1\`

CROSS JOIN age_range_cte
GROUP BY 1,2,3
ORDER BY \`table1_metric1\` DESC
LIMIT 10"
`;

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a custom SQL dimension query 1`] = `
"SELECT
  "table1".dim1 AS "table1_dim1",
  ("table1".dim1 < 18) AS "is_adult",
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
GROUP BY
  1,
  2
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a custom dimension query with a table calculation 1`] = `
"WITH  age_range_cte AS (
                    SELECT
                        FLOOR(MIN("table1".dim1)) AS min_id,
                        CEIL(MAX("table1".dim1)) AS max_id,
                        FLOOR((MAX("table1".dim1) - MIN("table1".dim1)) / 3) AS bin_width
                    FROM "db"."schema"."table1" AS \`table1\`
                ),
metrics AS (
SELECT
  "table1".dim1 AS \`table1_dim1\`,
CASE
                    WHEN "table1".dim1 IS NULL THEN NULL
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 0, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 1)
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 1, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 2)
ELSE CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 2, ' - ', age_range_cte.max_id)
                    END
                    AS \`age_range\`,
CASE
                        WHEN "table1".dim1 IS NULL THEN 3
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN 0
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN 1
ELSE 2
                        END
                        AS \`age_range_order\`,
  MAX("table1".number_column) AS \`table1_metric1\`
FROM "db"."schema"."table1" AS \`table1\`

CROSS JOIN age_range_cte
GROUP BY 1,2,3
)
SELECT
  *,
  table1_dim1 + 1 AS \`calc3\`
FROM metrics
ORDER BY \`table1_metric1\` DESC
LIMIT 10"
`;

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a fixed-width custom dimension query in BigQuery 1`] = `
"SELECT
  "table1".dim1 AS \`table1_dim1\`,
CONCAT(FLOOR("table1".dim1 / 10) * 10, ' - ', (FLOOR("table1".dim1 / 10) + 1) * 10 - 1) AS \`age_range\`,
FLOOR("table1".dim1 / 10) * 10 AS \`age_range_order\`,
  MAX("table1".number_column) AS \`table1_metric1\`
FROM "db"."schema"."table1" AS \`table1\`

GROUP BY 1,2,3
ORDER BY \`table1_metric1\` DESC
LIMIT 10"
`;

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a fixed-width custom dimension query in Postgres 1`] = `
"SELECT
  "table1".dim1 AS "table1_dim1",
  (
    FLOOR("table1".dim1 / 10) * 10 || ' - ' || (FLOOR("table1".dim1 / 10) + 1) * 10 - 1
  ) AS "age_range",
  FLOOR("table1".dim1 / 10) * 10 AS "age_range_order",
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
GROUP BY
  1,
  2,
  3
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: custom dimension queries matches snapshot for a sorted custom dimension query 1`] = `
"WITH  age_range_cte AS (
                    SELECT
                        FLOOR(MIN("table1".dim1)) AS min_id,
                        CEIL(MAX("table1".dim1)) AS max_id,
                        FLOOR((MAX("table1".dim1) - MIN("table1".dim1)) / 3) AS bin_width
                    FROM "db"."schema"."table1" AS \`table1\`
                )
SELECT
  "table1".dim1 AS \`table1_dim1\`,
CASE
                    WHEN "table1".dim1 IS NULL THEN NULL
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 0, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 1)
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 1, ' - ', age_range_cte.min_id + age_range_cte.bin_width * 2)
ELSE CONCAT(age_range_cte.min_id + age_range_cte.bin_width * 2, ' - ', age_range_cte.max_id)
                    END
                    AS \`age_range\`,
CASE
                        WHEN "table1".dim1 IS NULL THEN 3
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN 0
WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1 AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN 1
ELSE 2
                        END
                        AS \`age_range_order\`,
  MAX("table1".number_column) AS \`table1_metric1\`
FROM "db"."schema"."table1" AS \`table1\`

CROSS JOIN age_range_cte
GROUP BY 1,2,3
ORDER BY \`age_range_order\` DESC
LIMIT 10"
`;
